--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -287,6 +287,9 @@ form .counter.exceeded{color: red;}
 .page-node .submitted .gplus{background: url("images/gplus16.jpg") no-repeat scroll 0 5px transparent; text-indent: -9999px; display: inline-block; width: 20px;}
 
 .page-node #main .main-content .content{font-family: Georgia,"Bitstream Charter",serif; border-top: 1px dotted #C4C4C4; margin-top: 12px; padding-top: 20px;}
+
+.page-node #main .block .content{border-top: none;}
+
 .page-node #main .main-content .block-views .content{border: none;}
 
 .page-node #main #comments{margin: 30px;}
