--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -322,19 +322,23 @@ form .counter.exceeded{color: red;}
 
 /* Article list and teasers */
 #main .view-taxonomy-term .views-row,
-#main .view-articles .views-row,
+/*#main .view-articles .views-row,
 #main .view-news .views-row,
-#main .view-blog .views-row{border: 1px solid lightgray; height: 195px; padding: 5px 10px; margin-bottom: 12px; overflow: hidden; width: 382px;}
+#main .view-blog .views-row,*/
+#main .view-content-feeds .views-row{border: 1px solid lightgray; height: 195px; padding: 5px 10px; margin-bottom: 12px; overflow: hidden; width: 382px;}
 
 #main .view-taxonomy-term .views-row-odd,
-#main .view-articles .views-row-odd,
+/*#main .view-articles .views-row-odd,
 #main .view-news .views-row-odd,
-#main .view-blog .views-row-odd{float: left; margin-right: 10px;}
+#main .view-blog .views-row-odd,*/
+#main .view-content-feeds .views-row-odd{float: left; margin-right: 10px;}
 
 #main .view-taxonomy-term h2,
+/*
 #main .view-articles h2,
 #main .view-news h2,
-#main .view-blog h2{margin-top: 0;}
+#main .view-blog h2,*/
+#main .view-content-feeds h2{margin-top: 0;}
 
 
 /* Prefaces */
