--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -31,7 +31,7 @@ body.one-sidebar.sidebar-second #main {background: white; padding: 10px; width: 
 
 
 /* Make captiona narrower */
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {font-family: Georgia,"Bitstream Charter",serif;}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {font-family: Georgia,"Bitstream Charter",serif; clear: both;}
 h1{margin-top: 5px; margin-bottom: 5px; line-height: 40px;}
 
 
