--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -118,7 +118,7 @@ ul.header-links a.LinkedIn{background: url("images/sprite-2.png") no-repeat scro
 
 
 /* Footer */
-#footer {background: black; color: white; height: 130px; padding: 5px 0; text-align: center;}
+#footer {background: black; color: white; height: 130px; padding: 5px 0; text-align: center; margin-bottom: 50px;}
 #footer .region-footer{/*width: 1000px;*/ margin: 0 0 0 535px/*auto*/; font-family: Georgia,"Bitstream Charter",serif;}
 #footer .block{margin-bottom: 0;}
 #footer .menu a{color: white; font-size: 14px;}
