--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -538,4 +538,5 @@ a.yt-direct:active{outline: none;}
 
 /* Slideshows */
 
-#main .block#block-park-blocks-slideshow-two .content{height: 400px;}
+/*#main .block#block-park-blocks-slideshow-two .content{height: 400px;}*/
+.advanced-slider .slide-wrapper{height: 300px;}
