--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -540,4 +540,4 @@ a.yt-direct:active{outline: none;}
 
 /*#main .block#block-park-blocks-slideshow-two .content{height: 400px;}*/
 .advanced-slider .slide-wrapper{height: 300px;}
-/*.glossy-square-blue*/.advanced-slider .thumbnail-scroller.horizontal{bottom: -160%;}
+/*.glossy-square-blue*/ /*.advanced-slider .thumbnail-scroller.horizontal{bottom: -160%;}*/
