--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -538,6 +538,6 @@ a.yt-direct:active{outline: none;}
 
 /* Slideshows */
 
-#main .block#block-park-blocks-slideshow-two .content{height: 400px;}
-.advanced-slider .slide-wrapper{height: 300px;}
+#main .block#block-park-blocks-slideshow-two .content{height: 500px;}
+/*.advanced-slider .slide-wrapper{height: 300px;}*/
 /*.glossy-square-blue*/ /*.advanced-slider .thumbnail-scroller.horizontal{bottom: -160%;}*/
