--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -543,6 +543,8 @@ a.yt-direct:active{outline: none;}
 /*.glossy-square-blue*/ /*.advanced-slider .thumbnail-scroller.horizontal{bottom: -160%;}*/
 .content-box .title{
   opacity: 0;
+  position: relative;
+  top: 50px;
   
   -webkit-transition-duration: 1s;
 	-moz-transition-duration: 1s;
@@ -553,6 +555,7 @@ a.yt-direct:active{outline: none;}
 
 .content-box .title.in{
   opacity: 1;
+  top: 0px;
   
   -webkit-transition-duration: 5s;
 	-moz-transition-duration: 5s;
