--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -554,6 +554,7 @@ a.yt-direct:active{outline: none;}
 	transition-duration: 1s;
 }
 
+.in .content-box .title,
 .content-box .title.in{
   opacity: 1;
   top: 0px;
