--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -191,6 +191,8 @@ body.not-admin #om-menu-main-om-menu li.om-leaf.leaf-write-review{background: no
 
 .block{z-index: 1;}
 
+.front .block.block-park-blocks{height: 200px;}
+
 .block .inside,
 .node .inside{border: 1px solid gray; background: white; position: relative;}
 
