--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -548,7 +548,8 @@ a.yt-direct:active{outline: none;}
 
 /* Slideshows */
 
-#main .block#block-park-blocks-slideshow-two{height: 420px;}
+/*#main .block#block-park-blocks-slideshow-two{height: 420px;}*/
+
 /*.advanced-slider .slide-wrapper{height: 300px;}*/
 /*.glossy-square-blue*/ /*.advanced-slider .thumbnail-scroller.horizontal{bottom: -160%;}*/
 .content-box .title{
