--- a/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
+++ b/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
@@ -1,3 +1,4 @@
+/*
 .advanced-slider {
 	position: relative;
 	overflow: visible;
@@ -29,7 +30,7 @@
 	height: 100%;
 	z-index: 10;
 }
-
+*/
 
 .advanced-slider .slides {
 	position: absolute;
