--- a/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
+++ b/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
@@ -17,8 +17,8 @@
 
 .advanced-slider .slider-main {
 	position: relative;
-	/*width: 100%;
-	height: 100%;*/
+	width: 100%;
+	height: 30%;
 	z-index: 10;
 }
 
