--- a/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
+++ b/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
@@ -31,7 +31,7 @@
 	z-index: 10;
 }
 
-
+/*
 .advanced-slider .slides {
 	position: absolute;
 	overflow: hidden;
@@ -397,3 +397,4 @@
 	position: absolute;
 	z-index: 9999;
 }
+*/
