--- a/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
+++ b/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
@@ -1,6 +1,6 @@
 
 .advanced-slider {
-	position: relative;
+	/*position: relative;*/
 	overflow: visible;
 	outline: none;
 	font-family: Arial, Helvetica, sans-serif;
@@ -31,7 +31,7 @@
 	z-index: 10;
 }
 
-/*
+
 .advanced-slider .slides {
 	position: absolute;
 	overflow: hidden;
@@ -397,4 +397,3 @@
 	position: absolute;
 	z-index: 9999;
 }
-*/
