--- a/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
+++ b/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
@@ -1,11 +1,13 @@
 
 .advanced-slider {
-	/*position: relative;*/
+	position: relative;
 	overflow: visible;
 	outline: none;
 	font-family: Arial, Helvetica, sans-serif;
 	margin-left: auto;
 	margin-right: auto;
+  width: 100%;
+  height: 20%;
 }
 
 
