--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -191,8 +191,6 @@ body.not-admin #om-menu-main-om-menu li.om-leaf.leaf-write-review{background: no
 
 .block{z-index: 1;}
 
-.front .block#block-park-blocks-slideshow-two .content{height: 200px; width: 900px; position: relative;}
-
 .block .inside,
 .node .inside{border: 1px solid gray; background: white; position: relative;}
 
@@ -576,3 +574,5 @@ a.yt-direct:active{outline: none;}
 	-ms-transition-duration: 5s;
 	transition-duration: 5s;
 }
+
+.front .block#block-park-blocks-slideshow-two .content{height: 200px; width: 100%;}
