--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -578,8 +578,8 @@ a.yt-direct:active{outline: none;}
 .front .block#block-park-blocks-slideshow-two .content{height: 200px; width: 100%;}
 
 .glossy-curved-rounded-violet .slide-buttons {
-/*margin-top: -52px;*/
-top: 100px;
+margin-top: 0;
+top: 140px;
 right: 113px !important;
 left: auto !important;
 }
