--- a/themes/park/css/custom.css
+++ b/themes/park/css/custom.css
@@ -550,6 +550,7 @@ a.yt-direct:active{outline: none;}
 
 /*.advanced-slider .slide-wrapper{height: 300px;}*/
 /*.glossy-square-blue*/ /*.advanced-slider .thumbnail-scroller.horizontal{bottom: -160%;}*/
+/*
 .content-box .title{
   color: lightgray;
   opacity: 0;
@@ -583,3 +584,4 @@ top: 180px;
 right: 33px !important;
 left: auto !important;
 }
+*/
