--- a/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
+++ b/libraries/jquery.plugins/advanced_slider/css/base/advanced-slider-base.css
@@ -1,4 +1,3 @@
-
 .advanced-slider {
 	position: relative;
 	overflow: visible;
@@ -6,7 +5,6 @@
 	font-family: Arial, Helvetica, sans-serif;
 	margin-left: auto;
 	margin-right: auto;
-  
 }
 
 
@@ -19,7 +17,7 @@
 .advanced-slider .slider-main {
 	position: relative;
 	width: 100%;
-  height: 100%/*40%*/;
+	height: 100%;
 	z-index: 10;
 }
 
