--- a/themes/park/css/style.css
+++ b/themes/park/css/style.css
@@ -33,7 +33,7 @@ h2, .h2 {font-size: 1.5em; line-height: 1; margin-top: 1em;}
 h3, .h3 {font-size: 1.25em; line-height: 1.2; margin-top: 1.2em;}
 h4, h5, h6, .h4, .h5, .h6 {font-size: 1em; font-weight: bold; line-height: 1.5; margin-top: 1.5em;}
 
-p {font-size: 1em; line-height: 1.5; margin: 0 0 1.5em 0;}
+p {font-size: 22px; line-height: 1.5; margin: 0 0 1.5em 0;}
 
 a {color: #069; text-decoration: none;}
 a:visited {color: #309;}
